--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
                     <button type="button" class="btn btn-success btn-download hidden"><i class="fa fa-download"></i> Tải
                         xuống</button>
                 </div>
+                <div class="frame-change">
+                    <h4>Chọn khung:</h4>
+                    <select name="frame" id="frame" class="form-control">
+                        <option> - Trống - </option>
+                    </select>
+                </div>
                 
                 <!-- <div class="guide">
                 <h4>Hướng dẫn:</h4>
